bizinikiwi/pezframe/support/test/tests/pezpallet_ui/hooks_invalid_item.stderr
error[E0107]: missing generics for trait `Hooks`
  --> tests/pezpallet_ui/hooks_invalid_item.rs:29:18
   |
29 |     impl<T: Config> Hooks for Pezpallet<T> {}
   |                     ^^^^^ expected 1 generic argument
   |
note: trait defined here, with 1 generic parameter: `BlockNumber`
  --> $WORKSPACE/bizinikiwi/pezframe/support/src/traits/hooks.rs
   |
   | pub trait Hooks<BlockNumber> {
   |           ^^^^^ -----------
help: add missing generic argument
   |
29 |     impl<T: Config> Hooks<BlockNumber> for Pezpallet<T> {}
   |                          +++++++++++++
